err/mkenv.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/filesystems'...
Listing './lib/python3.5/site-packages/filesystems/tests'...
Listing './lib/python3.5/site-packages/filesystems-0.14.0.egg-info'...
Listing './lib/python3.5/site-packages/mkenv'...
Listing './lib/python3.5/site-packages/mkenv/tests'...
Compiling './lib/python3.5/site-packages/mkenv/tests/utils.py'...
***   File "./lib/python3.5/site-packages/mkenv/tests/utils.py", line 82
    raise cls, exc, tb
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mkenv-3.0.0.egg-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pyrsistent'...
Listing './lib/python3.5/site-packages/pyrsistent-0.14.2.egg-info'...
Listing './lib/python3.5/site-packages/pytoml'...
Listing './lib/python3.5/site-packages/pytoml-0.1.14.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './share'...
Listing './share/python-wheels'...
